--- a/Advanced Transformations.ipynb
+++ b/Advanced Transformations.ipynb
@@ -1119,7 +1119,7 @@
     "# drop original 'Hero|Publisher' column\n",
     "info_df = info_df.drop(columns = ['Hero|Publisher'])\n",
     "\n",
-    "# check\n",
+    "\n",
     "info_df.head()"
    ]
   },
@@ -1138,11 +1138,10 @@
     }
    ],
    "source": [
-    "# convert strings in dictionary to using double instead of\n",
-    "# single quotes for json.loads compatibility\n",
+    "# convert strings in dictionary to using double instead of single quotes \n",
     "info_df['Measurements'] = info_df['Measurements'].str.replace(\"'\", '\"')\n",
     "\n",
-    "# check\n",
+    "\n",
     "measurement = info_df.loc[0, 'Measurements']\n",
     "print(measurement)"
    ]
@@ -1165,7 +1164,7 @@
     "# use .apply with json.loads to convert strings to dicts\n",
     "info_df['Measurements'] = info_df['Measurements'].apply(json.loads)\n",
     "\n",
-    "# check\n",
+    "\n",
     "measurement = info_df.loc[0, 'Measurements']\n",
     "print(type(measurement))"
    ]
@@ -1289,7 +1288,7 @@
     "# columns for each dictionary item\n",
     "height_weight = info_df['Measurements'].apply(pd.Series)\n",
     "\n",
-    "# check\n",
+    "\n",
     "height_weight"
    ]
   },
@@ -1440,7 +1439,7 @@
     "# concatenate new columns to original df\n",
     "info_df = pd.concat((info_df, height_weight), axis = 1)\n",
     "\n",
-    "# check\n",
+    "\n",
     "info_df.head()"
    ]
   },
@@ -1578,7 +1577,7 @@
     "# drop original column\n",
     "info_df = info_df.drop(columns = ['Measurements'])\n",
     "\n",
-    "# check\n",
+    "\n",
     "info_df.head()"
    ]
   },
@@ -1648,18 +1647,63 @@
        "      <td>191.0 cm</td>\n",
        "      <td>65.0 kg</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Ungaran</td>\n",
+       "      <td>good</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>red</td>\n",
+       "      <td>Abin Sur</td>\n",
+       "      <td>DC Comics</td>\n",
+       "      <td>185.0 cm</td>\n",
+       "      <td>90.0 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Human / Radiation</td>\n",
+       "      <td>bad</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>green</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Abomination</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "      <td>203.0 cm</td>\n",
+       "      <td>441.0 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>bad</td>\n",
+       "      <td>No Hair</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Absorbing Man</td>\n",
+       "      <td>Marvel Comics</td>\n",
+       "      <td>193.0 cm</td>\n",
+       "      <td>122.0 kg</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Gender           Race Alignment Hair color Eye color Skin color        Hero  \\\n",
-       "0   Male          Human      good    No Hair    yellow    Unknown      A-Bomb   \n",
-       "1   Male  Icthyo Sapien      good    No Hair      blue       blue  Abe Sapien   \n",
+       "  Gender               Race Alignment Hair color Eye color Skin color  \\\n",
+       "0   Male              Human      good    No Hair    yellow    Unknown   \n",
+       "1   Male      Icthyo Sapien      good    No Hair      blue       blue   \n",
+       "2   Male            Ungaran      good    No Hair      blue        red   \n",
+       "3   Male  Human / Radiation       bad    No Hair     green    Unknown   \n",
+       "4   Male              Human       bad    No Hair      blue    Unknown   \n",
        "\n",
-       "           Publisher Height (cm) Weight (kg)  \n",
-       "0      Marvel Comics    203.0 cm    441.0 kg  \n",
-       "1  Dark Horse Comics    191.0 cm     65.0 kg  "
+       "            Hero          Publisher Height (cm) Weight (kg)  \n",
+       "0         A-Bomb      Marvel Comics    203.0 cm    441.0 kg  \n",
+       "1     Abe Sapien  Dark Horse Comics    191.0 cm     65.0 kg  \n",
+       "2       Abin Sur          DC Comics    185.0 cm     90.0 kg  \n",
+       "3    Abomination      Marvel Comics    203.0 cm    441.0 kg  \n",
+       "4  Absorbing Man      Marvel Comics    193.0 cm    122.0 kg  "
       ]
      },
      "execution_count": 18,
@@ -1673,8 +1717,8 @@
     "                      'Weight': 'Weight (kg)'}, \n",
     "            inplace = True)\n",
     "\n",
-    "# check\n",
-    "info_df.head(2)"
+    "\n",
+    "info_df.head()"
    ]
   },
   {
@@ -1764,7 +1808,7 @@
     "                                                          '', \n",
     "                                                          regex = False)\n",
     "    \n",
-    "# check\n",
+    "\n",
     "info_df[['Height (cm)', 'Weight (kg)']].head()"
    ]
   },
@@ -1799,13 +1843,12 @@
     }
    ],
    "source": [
-    "# convert 'Height (cm)' and 'Weight (kg)' columns from object-\n",
-    "# types to numeric\n",
+    "# convert 'Height (cm)' and 'Weight (kg)'columns from object-types to numeric\n",
     "\n",
     "info_df['Height (cm)'] = info_df['Height (cm)'].astype(float)\n",
     "info_df['Weight (kg)'] = info_df['Weight (kg)'].astype(float)\n",
     "\n",
-    "# check\n",
+    "\n",
     "info_df.info()"
    ]
   },
@@ -1925,7 +1968,7 @@
     "# split string on comma\n",
     "powers_df['powers_split'] = powers_df['Powers'].str.split(',')\n",
     "\n",
-    "# check\n",
+    "\n",
     "powers_df[['Powers', 'powers_split']].head()"
    ]
   },
@@ -2327,7 +2370,7 @@
     "    subsets.append(subset)\n",
     "    all_powers = pd.concat(subsets, axis = 1)\n",
     "    \n",
-    "# check\n",
+    "\n",
     "all_powers.head()"
    ]
   },
@@ -2783,7 +2826,7 @@
     "all_powers.rename(columns = {'hero_names': 'Hero'}, \n",
     "                     inplace = True)\n",
     "\n",
-    "# check\n",
+    "\n",
     "all_powers.head()"
    ]
   },
